--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+src/modulo-01-java-OO/projeto-lotr-bluej/doc/
+
+# Created by http://www.gitignore.io
 
 ### VisualStudio ###
 ## Ignore Visual Studio temporary files, build results, and
@@ -20,6 +23,11 @@ hs_err_pid*
 *.suo
 *.user
 *.sln.docstates
+.vs/
+
+# NuGet Packages
+packages
+!packages/repositories.config
 
 # Build results
 [Dd]ebug/
