--- a/src/modulo-05-dotnet/LojaNinja/LojaNinja.MVC/LojaNinja.MVC.csproj
+++ b/src/modulo-05-dotnet/LojaNinja/LojaNinja.MVC/LojaNinja.MVC.csproj
@@ -157,7 +157,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\EnumTipoPagamento.cs" />
     <Compile Include="Models\PedidoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -177,6 +176,16 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LojaNinja.Dominio\LojaNinja.Dominio.csproj">
+      <Project>{8447be04-6fbe-48c8-9739-3aaccd757adc}</Project>
+      <Name>LojaNinja.Dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LojaNinja.Repositorio\LojaNinja.Repositorio.csproj">
+      <Project>{2e75cc57-4006-481b-abc9-ccf4c7d07d0f}</Project>
+      <Name>LojaNinja.Repositorio</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
