--- a/src/modulo-05-dotnet/LojaNinja/LojaNinja.MVC/Web.config
+++ b/src/modulo-05-dotnet/LojaNinja/LojaNinja.MVC/Web.config
@@ -10,6 +10,11 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <connectionStrings>
+    <add name="Usuario"
+         connectionString="Server=DIULY\SQLCWI;Database=LojaNinja;User ID=sa; Password=sql2k8"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
