--- a/src/modulo-05-dotnet/LojaNinja/LojaNinja.Repositorio/LojaNinja.Repositorio.csproj
+++ b/src/modulo-05-dotnet/LojaNinja/LojaNinja.Repositorio/LojaNinja.Repositorio.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,8 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RepositorioBase.cs" />
     <Compile Include="RepositorioVendas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlDataReaderExtensions.cs" />
+    <Compile Include="UsuarioRepositorio.cs" />
+    <Compile Include="UsuarioRepositorioADO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LojaNinja.Dominio\LojaNinja.Dominio.csproj">
