--- a/src/modulo-05-dotnet/LojaNinja/LojaNinja.RepositorioEF/LojaNinja.RepositorioEF.csproj
+++ b/src/modulo-05-dotnet/LojaNinja/LojaNinja.RepositorioEF/LojaNinja.RepositorioEF.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8447BE04-6FBE-48C8-9739-3AACCD757ADC}</ProjectGuid>
+    <ProjectGuid>{77ED5C3E-F365-4840-9442-3E535539EB52}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LojaNinja.Dominio</RootNamespace>
-    <AssemblyName>LojaNinja.Dominio</AssemblyName>
+    <RootNamespace>LojaNinja.RepositorioEF</RootNamespace>
+    <AssemblyName>LojaNinja.RepositorioEF</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,7 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,13 +49,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IUsuarioRepositorio.cs" />
-    <Compile Include="Pedido.cs" />
-    <Compile Include="Permissao.cs" />
+    <Compile Include="ContextoDeDados.cs" />
+    <Compile Include="Migrations\201605171946357_Initial.cs" />
+    <Compile Include="Migrations\201605171946357_Initial.Designer.cs">
+      <DependentUpon>201605171946357_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TipoPagamento.cs" />
-    <Compile Include="Usuario.cs" />
-    <Compile Include="UsuarioServico.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LojaNinja.Dominio\LojaNinja.Dominio.csproj">
+      <Project>{8447be04-6fbe-48c8-9739-3aaccd757adc}</Project>
+      <Name>LojaNinja.Dominio</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201605171946357_Initial.resx">
+      <DependentUpon>201605171946357_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
