feat(MeuStringUtil): adicionar métodos isEmpty(), contaVogais() e invertString().

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ bld/
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
+/src/modulo-08-java/aula1/nbproject/
+/src/modulo-08-java/aula1/target/
