--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ bld/
 /src/modulo-08-java/aula1/target/
 /src/modulo-08-java/aula2/target/
 /src/modulo-08-java/aula3/nbproject/
+/src/modulo-08-java/aula3/target/
