--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ bld/
 /src/modulo-08-java/aula3/nbproject/
 /src/modulo-08-java/aula3/target/
 /src/modulo-08-java/aula4/target/
+/src/modulo-08-java/aula4/nbproject/
