--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ bld/
 /src/modulo-08-java/aula3/target/
 /src/modulo-08-java/aula4/target/
 /src/modulo-08-java/aula4/nbproject/
+/src/modulo-08-java/aula5/target/
