feat(Aula6): adicionar aula 6.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ bld/
 /src/modulo-08-java/aula4/target/
 /src/modulo-08-java/aula4/nbproject/
 /src/modulo-08-java/aula5/target/
+/src/modulo-08-java/aula6/crescer-web/target/
