--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ bld/
 /src/modulo-08-java/aula7/modulo-08-java/aula3/target/
 /src/modulo-08-java/aula7/modulo-08-java/aula6/crescer-entity/target/
 /src/modulo-08-java/aula7/modulo-08-java/aula6/crescer-web/target/
+/src/modulo-08-java/aula7/modulo-08-java/aula4/target/
+/src/modulo-08-java/aula7/modulo-08-java/aula5/target/
