--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ bld/
 /src/modulo-08-java/aula7/modulo-08-java/aula6/crescer-web/target/
 /src/modulo-08-java/aula7/modulo-08-java/aula4/target/
 /src/modulo-08-java/aula7/modulo-08-java/aula5/target/
+/src/modulo-08-java/aula8/spring-crescer-web/target/
